<resources>
    <string name="app_name">שופרסל</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="login">התחבר</string>
    <string name="register">הרשם</string>
    <string name="logout">התנתק</string>
    <string name="mybaskets">הסלים שלי</string>
    <string name="myhistory">הסטוריית הזמנות</string>
    <string name="setBasket">בחר סל זה לעריכה</string>
    <string name="addToCurrentBasket">הוסף סל זה לסל הנוכחי</string>
    <string name="set">ערוך</string>
    <string name="saveBasket">שמור סל</string>
    <string name="saveAllBaskets">שמור כל הסלים</string>
    <string name="about_content">אפליקציה זו נבנתה במסגרת פרוייקט שנתי של תואר ראשון במדעי המחשב ע"י נעם בלגובסקי ועמית פלד</string>
    <string name="new_basket">סל חדש</string>
    <string name="anonymous">אנונימי</string>
    <string name="basketName">שם הסל</string>
    <string name="basketAuthorName">שם כותב הסל</string>
    <string name="automaticShopping">קנייה אוטומטית</string>
    <string name="productName">שם מוצר</string>
    <string name="quantity">כמות</string>
    <string name="addProduct">הוסף מוצר</string>
    <string name="startAutoBuy">התחל קנייה אוטומטית</string>
    <string name="continueToNextProduct">המשך למוצר הבא</string>
    <string name="UpdateAndsearchAgain">ערוך וחפש שוב</string>
    <string name="finishAndCreateBasket">סיים וצור סל</string>
    <string name="chooseBestOption">בחר באפשרות המתאימה ביותר</string>
    <string name="alert">התראה</string>
    <string name="chooseOptionToContinue">יש לבחור מוצר מהרשימה המתאים לך כדי להמשיך</string>
    <string name="understood">הבנתי</string>
    <string name="automaticBasket">סל אוטומטי</string>
    <string name="chooseAutomaticMethod">בחר שיטה אוטומטית</string>
    <string name="debugSettings">הגדרות דיבוג</string>
    <string name="serversIp">איי-פי של הסרבר</string>
    <string name="onlineMode">מצב אונליין</string>
    <string name="saveChanges">שמור שינויים</string>

    <!-- titles of actionbar in each activity -> everyone with "shufersal" -->
    <string name="title_shufersal">שופרסל</string>

    <!-- sidebar buttons titles (navigation menu) -->
    <string name="myaccount">המשתמש שלי</string>
    <string name="menu">תפריט</string>
    <string name="main">ראשי</string>
    <string name="addBasket">הוסף סל</string>

    <!-- bar titles -->
    <string name="about">אודות</string>
    <string name="manualAutoBuyButton">התחל להקליד</string>
    <string name="manualAutoBuyTextView">קנה אוטומטית באמצעות הקלדה</string>
    <string name="load_image_button">העלה תמונה קיימת</string>
    <string name="autoBuyByCameraSnipText">קנה אוטומטית באמצעות תמונה</string>
    <string name="autoBuyBySnipButtonDescription">Automatic Purchase by snip</string>
    <string name="photo" />
</resources>
