<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:contex="com.example.testingapp.MainActivity">

    <item
        android:id="@+id/menu_mainactivity_myaccount"
        android:icon="@drawable/ic_myaccount_24dp"
        android:title="@string/myaccount"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_my_account_baskets_addBasket"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/addBasket"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_mainactivity_about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>